--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
