--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
